[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }